--- a/index.css
+++ b/index.css
@@ -190,9 +190,13 @@ a.card {
   color: #fff;
 }
 
-.btn-v3 {
-  background-color: red;
-  color: #fff;
+.btn-l-icon {
+  display: flex;
+  align-items: center;
+}
+
+.btn-l-icon span {
+  margin: 0 0 0 10px;
 }
 
 /* --------------------------------- footer --------------------------------- */
@@ -236,6 +240,12 @@ footer {
 .icon-lg {
   width: 40px;
   height: 40px;
+  object-fit: contain;
+}
+
+.icon-xs {
+  width: 15px;
+  height: 15px;
   object-fit: contain;
 }
 
@@ -494,18 +504,22 @@ hr {
   align-items: center;
   justify-content: flex-start;
   gap: 10px;
-  margin: 10px 0;
+  margin: 10px 0 20px;
+  border-radius: 20px;
+  width: fit-content;
+  background: #fff;
+  padding: 5px;
 }
 
 .qty-container .qty-btn {
-  width: 20px;
-  height: 20px;
+  width: 24px;
+  height: 24px;
   padding: 5px;
   border-radius: 50px;
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: #f90;
+  background-color: #f0d4d4;
   cursor: pointer;
   user-select: none;
 }
